[package]
name = "path-template-filter"
version = "0.2.2-panic-on-request-header"
authors = ["Park Hyunjeong <anyflow@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/anyflow/path-template-filter"
edition = "2021"


[lib]
crate-type = ["cdylib"]       # WASM 모듈로 컴파일하기 위해 필요
name = "path_template_filter" # 라이브러리 이름은 반드시 언더스코어 사용
path = "src/lib.rs"           # 라이브러리 소스 위치


[dependencies]
proxy-wasm = "0.2.2"
serde_json = "1.0.140"
matchit = "0.8.6"
log = "0.4.26"
lru = "0.13.0"

[dev-dependencies]
# proxy-wasm-test-framework = { git = "https://github.com/proxy-wasm/test-framework" }
