[package]
name = "openapi-endpoint-filter"
version = "0.4.0"
authors = ["Park Hyunjeong <anyflow@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/anyflow/openapi-endpoint-filter"
edition = "2021"


[lib]
crate-type = ["cdylib"]          # Required for compiling as a WASM module
name = "openapi_endpoint_filter" # Library name must use underscores
path = "src/lib.rs"              # Library source location


[dependencies]
proxy-wasm = "0.2.3"
serde_json = "1.0.142"
matchit = "0.9.1"
log = "0.4.27"

[dev-dependencies]
# proxy-wasm-test-framework = { git = "https://github.com/proxy-wasm/test-framework" }
